dynosaur/tests/fail/self_and_box_receivers.stderr
error: By value Self and Box<Self> are unsupported
 --> tests/fail/self_and_box_receivers.rs:2:1
  |
2 | / trait All {
3 | |     fn ref_mut(&mut self);
4 | |     fn ref_(&self) -> impl Send;
5 | |     fn owned(self) -> impl Send;
6 | |     fn self_box(self: Box<Self>) -> impl Send;
7 | | }
  | |_^

error: aborting due to 1 previous error

